--- a/app/src/main/res/layout/jury_card_layout.xml
+++ b/app/src/main/res/layout/jury_card_layout.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:elevation="6dp">>
 
 
     <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        >
+        android:background="@color/lightBlue">>
+
+        <TextView
+            android:id="@+id/jury"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Jury :" />
+
         <TextView
             android:id="@+id/jury_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:minLines="1"
             android:maxLines="2"
+            android:minLines="1"
             android:padding="2dp"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/jury_date"
             android:layout_width="match_parent"
-            android:layout_height="202dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="2dp"
             android:textAlignment="textEnd"
