--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#1C75BD</color>
     <color name="colorPrimaryDark">#186098</color>
     <color name="colorAccent">#68C6DD</color>
+    <color name="red">#962152</color>
+    <color name="orange">#E84A26</color>
+    <color name="lightBlue">#69c7de</color>
+    <color name="darkBlue">#1C75BD</color>
+    <color name="gray">#595959</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
