--- a/app/src/main/res/layout/jury_card_layout.xml
+++ b/app/src/main/res/layout/jury_card_layout.xml
@@ -2,19 +2,21 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:elevation="6dp">>
+    android:elevation="6dp"
+    android:fontFamily="@font/roboto_regular">
 
 
     <LinearLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:background="@color/lightBlue">>
+        android:background="@color/lightBlue">
 
         <TextView
             android:id="@+id/jury"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="5dp"
             android:text="Jury :" />
 
         <TextView
@@ -23,16 +25,16 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:minLines="1"
-            android:padding="2dp"
+            android:padding="5dp"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/jury_date"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:padding="2dp"
+            android:padding="5dp"
             android:textAlignment="textEnd"
             android:textSize="14sp" />
 
