--- a/app/src/main/res/layout/row_user_item.xml
+++ b/app/src/main/res/layout/row_user_item.xml
@@ -12,4 +12,10 @@
         android:layout_weight="1"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/tv_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="right" />
+
 </LinearLayout>
